concord_macros/tests/dsl/fail/fail_rate_limit_empty_list_defaults.rs
use concord_macros::api;

api! {
    client EmptyRateLimitListDefaultsApi {
        base "https://example.com"

        defaults {
            rate_limit []
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
