concord_macros/tests/dsl/fail/fail_rate_limit_empty_list_defaults.stderr
error: empty rate_limit list; expected at least one profile name
 --> tests/dsl/fail/fail_rate_limit_empty_list_defaults.rs:8:24
  |
8 |             rate_limit []
  |                        ^
